--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -371,6 +371,7 @@
       <DependentUpon>VoucherModels.edmx</DependentUpon>
       <LastGenOutput>VoucherModels.cs</LastGenOutput>
     </Content>
+    <Resource Include="Views\icon1.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
