--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -87,7 +87,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Helper\BaseCommand.cs" />
+    <Compile Include="Models\BussinesLogic\DatabaseClass.cs" />
+    <Compile Include="Models\BussinesLogic\PaymentLogic.cs" />
+    <Compile Include="Models\BussinesLogic\Voucher.cs" />
+    <Compile Include="Models\BussinesLogic\VoucherProfit.cs" />
     <Compile Include="Models\EntitiesForView\CustomerPreferencesForAllView.cs" />
+    <Compile Include="Models\EntitiesForView\FailedPayments.cs" />
+    <Compile Include="Models\EntitiesForView\KeyAndValue.cs" />
     <Compile Include="Models\EntitiesForView\NotificationsForAllViws.cs" />
     <Compile Include="Models\EntitiesForView\OrderDiscountsForAllViews.cs" />
     <Compile Include="Models\EntitiesForView\PaymentsForAllViews.cs" />
@@ -152,6 +158,7 @@
       <DependentUpon>VoucherModels.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AddDataToTable.cs" />
+    <Compile Include="ViewModels\FailedPaymentsViewModel.cs" />
     <Compile Include="ViewModels\PaymentsAddViewModel.cs" />
     <Compile Include="ViewModels\AppSettingsAddViewModel.cs" />
     <Compile Include="ViewModels\AppSettingsViewModel.cs" />
@@ -172,6 +179,7 @@
     <Compile Include="ViewModels\OrderItemsViewModel.cs" />
     <Compile Include="ViewModels\OrdersViewModel.cs" />
     <Compile Include="ViewModels\PaymentsViewModel.cs" />
+    <Compile Include="ViewModels\SalesReportViewModel.cs" />
     <Compile Include="ViewModels\UserAddViewModel.cs" />
     <Compile Include="ViewModels\UserLoginHistoryViewModel.cs" />
     <Compile Include="ViewModels\UsersViewModel.cs" />
@@ -206,6 +214,9 @@
     <Compile Include="Views\DiscountCodesView.xaml.cs">
       <DependentUpon>DiscountCodesView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\FailedPaymentsView.xaml.cs">
+      <DependentUpon>FailedPaymentsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\GetAllDataView.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -236,6 +247,9 @@
     </Compile>
     <Compile Include="Views\PaymentsView.xaml.cs">
       <DependentUpon>PaymentsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SalesReportView.xaml.cs">
+      <DependentUpon>SalesReportView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserAddView.xaml.cs">
       <DependentUpon>UserAddView.xaml</DependentUpon>
@@ -331,6 +345,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\FailedPaymentsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -372,6 +390,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PaymentsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SalesReportView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
